--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -11,6 +11,6 @@ jobs:
     name: Backport
     steps:
       - name: Backport
-        uses: radcortez/backport-action@master
+        uses: radcortez/backport-action@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
