--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: Backport
         uses: radcortez/backport-action@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
